--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -133,9 +133,9 @@
 
 % Write some science here.
 
-Esimerkkilause ja lähdeviite~\cite{esimerkki} ja \cite{esimerkki2}.
-jäsennelty asianmukaisesti (kenelle, miksi, millaisessa ympäristössä; ratkaisun lähestymistapa; tutkimuskysymys, tulokset ja impakti; loppulukujen roolitus).
-\\
+%Esimerkkilause ja lähdeviite~\cite{esimerkki} ja \cite{esimerkki2}.
+%jäsennelty asianmukaisesti (kenelle, miksi, millaisessa ympäristössä; ratkaisun lähestymistapa; tutkimuskysymys, tulokset ja impakti; loppulukujen roolitus).
+
 
 
 
@@ -149,15 +149,30 @@ jäsennelty asianmukaisesti (kenelle, miksi, millaisessa ympäristössä; ratkai
 
 Ohjelmistoarkkitehtuuri on ohjelmistojen ymmärtämisen kannalta tärkeä konsepti josta jokaisen ohjelmoijan pitäisi olla tietoinen, sillä jokaisella ohjelmistojärjestelmällä on oma arkkitehtuurinsa \cite[s. 4]{ieee_2000}. Suunnittelematon arkkitehtuuri eli niin sanottu \textit{Big Ball of Mud} saattaa pahimmassa tapauksessa olla yksi epäonnistuneen projektin tunnusmerkkejä, kun taas hyvin muodostettu arkkitehtuuri auttaa eri sidosryhmien välisessä kommunikaatiossa, tekee tuotettavasta ohjelmistojärjestelmästä helposti lähestyttävän ja on yksi suurimmista onnistumistekijöistä projektin jatkon kannalta. 
 
-Ohjelmistojen ylläpidettävyys lasketaan yhdeksi ei-toiminnalliseksi laatuvaatimukseksi ja siihen kuuluu vahvasti ohjelmistojen testattavuus, joka taas laatuvaatimuksena on lähempänä ohjelmoijaa, kuin asiakasta. Testausta tapahtuu ohjelmistojärjestelmän elinaikana useita kertoja, joista  aikaisimmat jo projektin alkumetreillä, kun halutaan evaluoida järjestelmän toiminnallisuutta. Testattavuus taas määrittelee, että kuinka helppoa järjestelmää on ylipäätänsä testata. Kuitenkin arkkitehtuurin ja testattavuuden yhteys on häilyvä ja tämä tutkimus pyrkii selventämään tätä suhdetta ja miten testattavuus tulee ilmi ohjelmistoarkkitehtuurissa. Tutkimus siis vastaa kysymykseen \textit{miten hyvä testattavuus näkyy ohjelmistojen arkkitehtuurissa}.  
+Ohjelmistojen ylläpidettävyys lasketaan yhdeksi ei-toiminnalliseksi laatuvaatimukseksi ja siihen kuuluu vahvasti ohjelmistojen testattavuus, joka taas laatuvaatimuksena on lähempänä ohjelmoijaa, kuin asiakasta. Testausta tapahtuu ohjelmistojärjestelmän elinaikana useita kertoja, joista  aikaisimmat jo projektin alkumetreillä, kun halutaan evaluoida järjestelmän toiminnallisuutta. Testattavuus taas määrittelee, että kuinka helppoa järjestelmää on ylipäätänsä testata. Kuitenkin arkkitehtuurin ja testattavuuden yhteys on häilyvä, vaikka arkkitehtuuri koskee jokaista kehittäjää. Tämä tutkimus pyrkii selventämään tätä suhdetta ja miten testattavuus tulee ilmi ohjelmistoarkkitehtuurissa. Tutkimus siis vastaa kysymykseen \textit{miten hyvä testattavuus näkyy ohjelmistojen arkkitehtuurissa}.  
 
 \subsection{Tutkimusmenetelmä}
-Tutkimuskysymykseen vastataan kirjallisuuskatsauksen avulla ja tutkimalla, että mitkä arkkitehtuuriset päätökset ja elementit ovat hyvän testattavuuden tekijöitä. Hyvän testattavuuden havaitsemiseen etsitään näkymää nykyisistä menetelmistä kuvata arkkitehtuuria. Näitä menetelmiä ovat pääasiassa erilaisten näkymien ja näkökulmien joukko.
+Tutkimuskysymykseen vastataan kirjallisuuskatsauksen avulla ja tutkimalla, että mitkä arkkitehtuuriset päätökset ja elementit ovat hyvän testattavuuden tekijöitä. Hyvän testattavuuden havaitsemiseen etsitään näkymää nykyisistä menetelmistä kuvata arkkitehtuuria. Näitä menetelmiä ovat pääasiassa erilaisten näkymien ja näkökulmien joukko, joista tässä tutkimuksessa pyritään etsimään kehittäjän näkökulmasta kaikista relevantein.
 
 \subsection{Tutkimuksen rakenne}
 
 Kappaleessa 2 käydään läpi ohjelmistoarkkitehtuuria käsitteenä ja luodaan pohja eri kuvaustavoille ohjelmistoarkkitehtuuria varten. Samalla kuvataan, että miten ja mistä näkymä voidaan luoda ohjelmistojärjestelmälle. Kappale 3 keskittyy ohjelmistolle asetettaviin laadullisiin vaatimuksiin, joista kappale 4 tarkentaa testattavuutta. Kappale 5 etsii arkkitehtuurin ja testattavuuden välistä suhdetta ja viimeinen kappale keskittyy testattavuuden parantamiseen arkkitehtuurin avulla.
 
+\subsection{Termistö}
+
+Tässä tutkimuksessa noudatetaan vahvasti IEEE:n määritelmiä \citep[s. 3-4]{ieee_2000} arkkitehtuuriselle termistölle seuraavalla tavalla:
+
+\paragraph{Sidosryhmä (stakeholder)} Kuka tai ketkä tahansa, joilla on jokin rooli tai kiinnostus jotain asiaa kohtaan ohjelmistojärjestelmässä.
+
+\paragraph{Arkkitehtuurinen kuvaus (architectural description)} Kokoelma asioita, jotka dokumentoivat arkkitehtuuria.
+
+\paragraph{Komponentti} a.
+
+\paragraph{Järjestelmä} Komponenttien joukko, jotka yhdessä mahdollistavat tietyn funktion tai kokoelman funktioita.
+
+\paragraph{Arkkitehtuuri} Järjestelmän komponenttien ja niitä yhdistävien yhteyksien luoma joukko, jotka sijoittuvat tiettyyn ympäristöön.  
+
+\paragraph{Näkymä} Kuvaus järjestelmästä niin, että se ottaa huomioon vain tietyt asiat.
 
 
 \section{Ohjelmistoarkkitehtuuri}
@@ -168,28 +183,28 @@ Se kuvaa kuitenkin vähintään aina abstraktilla tasolla toteutettavaa ohjelmis
 Ohjelmistoarkkitehtuuri voidaan nähdä karkeasti neljästä eri näkökulmasta  \citep[s. 2-7]{gorton_understanding_2011}:  ohjelmiston rakenteen kuvaajana, kuvaajana ohjelmiston komponenttien välisille suhteille, mallina joka ottaa huomioon ei-toiminnalliset (non-functional) vaatimukset ja yleisenä abstraktiona. 
 % kappaleessa selitetään myös riippuvuuksien vähentämisestä
 
-Rakenteen kuvaajana arkkitehtuuri määrittelee ohjelmistojärjestelmän sisäistä rakennetta, joka koostuu useista komponenteista sekä moduuleista. Erilaiset moduulit tekevät tiettyä työtä ja täten erilaiset vastuut on jaettu ohjelmistojärjestelmän sisällä loogiisiin kokoelmiin.
+Rakenteen kuvaajana arkkitehtuuri määrittelee ohjelmistojärjestelmän sisäistä rakennetta, joka koostuu useista komponenteista sekä moduuleista, jotka yhdistävät komponentteja. Erilaiset moduulit tarjoavat aina tietyn toiminnallisuuden ja tämän kautta erilaiset vastuut on jaettu ohjelmistojärjestelmän sisällä loogiisiin kokoelmiin.
 % kappaleessa myös patterneja
 
-Komponenttien välisen kommunikaation mallintaminen tulee vastaan, kun ohjelmistojärjestelmää jaetaan erilaisiin komponentteihin. Tavoitteena on kertoa mallintamalla, että mitkä komponentit tai moduulit ovat vuorovaikutuksessa toistensa kanssa ja millä tavoin. Yleisin kommunikaatiotapa on esimerkiksi suorat funktiokutsut komponenttien välillä.  
+Komponenttien välisen kommunikaation mallintaminen tapahtuu, kun ohjelmistojärjestelmää jaetaan erilaisiin komponentteihin. Tavoitteena on kertoa mallintamalla, että mitkä komponentit tai moduulit ovat vuorovaikutuksessa toistensa kanssa ja millä tavoin. Yleisin kommunikaatiotapa on esimerkiksi suorat funktiokutsut komponenttien välillä.  
 % kappaleessa ei-toiminnallisten vaatimuksien jako kolmeen eri luokkaan
 
 Ei-toiminnaliset vaatimukset tulevat esille vasta arkkitehtuurin avulla ja arkkitehtuurin mallinnuksen avulla voidaan määrittää miten ohjelma suorittaa sille määrättyä tehtävää sen sijasta, että mallinnettaisiin mitä ohjelma tekee. 
 % lähteitä lisää?
 
 Arkkitehtuurin avulla on mahdollista abstrahoida
-sidosryhmille (stakeholders) ohjelmistojärjestelmää helpommin lähestyttäväksi, jolloin kommunikaatio eri osapuolten välillä helpottuu. Abstrahoinnin avulla pystytään yksinkertaistamaan järjestelmän konkreettista toteutusta ja suorittamaan arkkitehtuurista erittelyä (architectural decomposition), jossa muodostetaan epärelevanteista komponenteista mustia laatikoita (black boxes). Mustien laatikoiden ideana on piilottaa komponenttien sisäistä toteutusta eri abstraktiotasoilla, jolloin arkkitehtuurista voidaan muodostaa eri tarkkuustason malleja. 
+sidosryhmille ohjelmistojärjestelmää helpommin lähestyttäväksi, jolloin kommunikaatio eri osapuolten välillä helpottuu. Abstrahoinnin avulla pystytään yksinkertaistamaan järjestelmän konkreettista toteutusta ja suorittamaan arkkitehtuurista erittelyä (architectural decomposition), jossa muodostetaan epärelevanteista komponenteista mustia laatikoita (black boxes). Mustien laatikoiden ideana on piilottaa komponenttien sisäistä toteutusta eri abstraktiotasoilla, jolloin arkkitehtuurista voidaan muodostaa eri tarkkuustason malleja. 
 \\
 
-Hieman samanlainen jaottelu on määritelty myös Solmsin tutkimuksessa \citep[s. 368-369]{solms_what_2012}. Siinä ohjelmistoarkkitehtuuri-määritelmä jaetaan kolmeen eri määrittelyluokkaan: korkean tason abstraktioon ohjelmistojärjestelmästä, rakenteita sekä ulkoisia näkyviä ominaisuuksia korostavaan määritelmään ja peruskäsitteistöön sekä rajoitteisiin joiden puitteissa ohjelmistojärjestelmää kehitetään. 
+Hieman samanlainen jaottelu on määritelty myös Solmsin tutkimuksessa \citep[s. 368-369]{solms_what_2012}. Siinä ohjelmistoarkkitehtuuri-määritelmä jaetaan kolmeen eri luokkaan: korkean tason abstraktioon ohjelmistojärjestelmästä, rakenteita sekä ulkoisia ominaisuuksia korostavaan määritelmään ja käsitteistöön sekä rajoitteisiin joiden puitteissa ohjelmistojärjestelmää kehitetään. 
 
 Näistä kaksi ensimmäistä määritelmää vastaavat samoja kuin \citep[s. 2-7]{gorton_understanding_2011}, mutta tarkentaen kumpaakin omat kuvaustavat. Korkean tason abstraktioita mallinnetaan erilaisten näkymien kautta tai käyttämällä arkkitehtuurallisia malleja, jotka IEEE on määritellyt \citep[s. 4-5]{ieee_2000}. % IEEE:stä voisi kirjoittaa enemmän    
 Rakenteita korostettaessa mallinnuksessa käytetään UML-kaavioita, koska UML määrittelee ohjelmiston arkkitehtuuria osina, joita pystytään rekursiivisesti tarkentamaan haluttaessa. Tarkennuksen avulla osat pystytään kuvaamaan kommunikoivan keskenään erilaisten rajapintojen kautta, osia yhdistäviä suhteita pystytään tarkastelemaan ja erilaisia rajoitteita pystytään luomaan osien välille. 
 
-Kolmas määritelmä on paljon laajempi näkemys ohjelmistoarkkitehtuurista, koska se kuvaa ohjelmistojärjestelmän peruskäsitteistön ja ominaisuudet siinä ympäristössä, jossa ne ilmeentyvät elementtien, suhteiden ja suunnittelun periaatteiden kautta. Peruskäsitteistö tarjoaa sen käsitteistön, jonka avulla sovelluslogiikka voidaan määritellä. Ominaisuudet liittyvät usein ohjelmistojärjestelmän laadullisiin ominaisuuksiin. Periaatteet voidaan nähdä järjestelmän keskeisinä suunnittelurajoitteina (core design constraints), joiden kokonaisuus muodostaa järjestelmän arkkitehtuurisen tyylin. Ohjelmistojärjestelmän arkkitehtuurin tyyli voi esimerkiksi olla väylät ja suodattimet (pipes and filters). % lisää
+Kolmas määritelmä on paljon laajempi näkemys ohjelmistoarkkitehtuurista, koska se kuvaa ohjelmistojärjestelmän käsitteistön ja ominaisuudet siinä ympäristössä, jossa ne ilmeentyvät elementtien, suhteiden ja suunnittelun periaatteiden kautta. Peruskäsitteistö tarjoaa sen käsitteistön, jonka avulla sovelluslogiikka voidaan määritellä. Esimerkiksi määrittelemällä, että jokin järjestelmä on tyypiltään palvelin, kun taas ominaisuudet liittyvät ohjelmistojärjestelmän laadullisiin ominaisuuksiin. Periaatteet voidaan nähdä järjestelmän keskeisinä suunnittelurajoitteina (core design constraints), joiden kokonaisuus muodostaa järjestelmän arkkitehtuurisen tyylin. Ohjelmistojärjestelmän arkkitehtuurin tyyli voi esimerkiksi olla väylät ja suodattimet (pipes and filters). % lisää
 \\
 
-Näistä kahdesta eri jaottelusta ohjelmistoarkkitehtuuriin voidaan nähdä merkittävinä yhtäläisyyksinä tarpeen kuvata ohjelmiston rakenteellisuutta, komponenttien välistä kommunikaatiota ja laadullisia vaatimuksia. Kaikki nämä edellämainitut ominaisuudet on saatava  upotettua ohjelmistojärjestelmästä luotavaan arkkitehtuuriseen malliin niin, että ne vastaavat muunmuassa seuraaviin kysymyksiin \citep[s. 31 - 33]{Rozanski:2011:SSA:2072649}: mitkä ovat arkkitehtuurin toiminnalliset elementit; miten nämä elementit kommunikoivat keskenään ja ulkomaailman kanssa; mitä tietoa käsitellään, talletetaan ja esitetään; ja mitä fyysisiä ja ohjelmallisia elementtejä tarvitaan tukemaan näitä  elementtejä. Kuitenkaan arkkitehtuurista luotava malli ei saisi olla monoliittinen malli, joka pyrkii kuvamaan kaiken yhdessä mallissa, koska arkkitehtuuria ei ole mahdollista kuvata vain yhden mallin avulla \cite{Rozanski:2011:SSA:2072649}. Tämä johtuu siitä, että monoliittinen malli on erittäin vaikea ymmärtää, siitä on vaikeaa löytää arkkitehtuurin tärkeimmät ominaisuudet (features) ja se on usein puutteelinen, jäljessä eikä vastaa enää nykyistä ohjelmistojärjestelmää. Ratkaisu tähän on jakaa malli useisiin toisiinsa liittyviin näkymiin (views), jotka esittävät jokainen yhden näkökulman (viewpoint) järjestelmän arkkitehtuuriin keräämällä yhteen toiminnalliset piirteet sekä laadulliset ominaisuudet \citetext{\citealp[s. 33-34]{Rozanski:2011:SSA:2072649}; \citealp[s. 8-9]{gorton_understanding_2011}; \citealp[s. 117]{Ran:1998:ASV:288408.288438}}. Tämän avulla voidaan tarkastella saavuttaako järjestelmä sille asetetut tavoitteet.
+Näistä kahdesta eri jaottelusta ohjelmistoarkkitehtuuriin voidaan nähdä merkittävinä yhtäläisyyksinä tarpeen kuvata ohjelmiston rakenteellisuutta, komponenttien välistä kommunikaatiota ja laadullisia vaatimuksia. Kaikki nämä edellämainitut ominaisuudet on saatava  upotettua ohjelmistojärjestelmästä luotavaan arkkitehtuuriseen malliin niin, että ne vastaavat muunmuassa seuraaviin kysymyksiin \citep[s. 31 - 33]{Rozanski:2011:SSA:2072649}: mitkä ovat arkkitehtuurin toiminnalliset elementit; miten nämä elementit kommunikoivat keskenään ja ulkomaailman kanssa; mitä tietoa käsitellään, talletetaan ja esitetään; mitä fyysisiä ja ohjelmallisia elementtejä tarvitaan tukemaan näitä  elementtejä. Kuitenkaan arkkitehtuurista luotava malli ei saisi olla monoliittinen malli, joka pyrkii kuvamaan kaiken yhdessä mallissa, koska arkkitehtuuria ei ole mahdollista kuvata vain yhden mallin avulla \cite{Rozanski:2011:SSA:2072649}. Tämä johtuu siitä, että monoliittinen malli on erittäin vaikea ymmärtää jokaiselle osapuolelle, siitä on vaikeaa löytää arkkitehtuurin tärkeimmät ominaisuudet (features) ja se on usein puutteelinen, jäljessä eikä vastaa enää nykyistä ohjelmistojärjestelmää. Ratkaisu tähän on jakaa malli useisiin toisiinsa liittyviin näkymiin (views), jotka esittävät jokainen yhden näkökulman (viewpoint) järjestelmän arkkitehtuuriin keräämällä yhteen toiminnalliset piirteet sekä laadulliset ominaisuudet \citetext{\citealp[s. 33-34]{Rozanski:2011:SSA:2072649}; \citealp[s. 8-9]{gorton_understanding_2011}; \citealp[s. 117]{Ran:1998:ASV:288408.288438}}. Tämän avulla voidaan tarkastella saavuttaako järjestelmä sille asetetut tavoitteet.
 
 
 \subsection{Arkkitehtuurin kuvaus}
@@ -199,18 +214,19 @@ Arkkitehtuurin kuvaaminen sallii kommunikoinnin eri sidosryhmien välille ja mah
 \subsubsection{Näkymät}
 Arkkitehtuuristen näkymien tehtävänä on kuvata ne näkökulmat arkkitehtuurista, jotka ovat merkityksellisiä itse asialle, jota näkymä haluaa painottaa \citetext{\citealp[s. 34]{Rozanski:2011:SSA:2072649}; \citealp[s. 15]{may2005survey}}. Yksi tunnetuimmista määritelmistä arkkitehtuuriselle näkymälle on Krutchenin 4+1 näkymämalli (4+1 View Model) \citep[s.7-8]{gorton_understanding_2011}. 
 
-4+1 -mallissa arkkitehtuuri kuvataan neljän näkymän avulla: looginen, prosessi, fyysinen ja kehitys. Looginen näkymä kuvailee esimerkiksi luokkakaavioiden avulla ohjelmistojärjestelmän elementtejä ja niiden välisiä suhteita tarkentaen järjestelmän rakennetta, prosessinäkymä keskittyy ajonaikaisen suorituksen kuvaamiseen tarkentamalla muunmuassa miten samanaikaisuuden hallinta tapahtuu järjestelmässä, fyysinen näkymä keskittyy siihen miten järjestelmän eri komponentit kuvautuvat fyysiselle laitteistolle jossa komponenttia ajetaan ja lopuksi kehitysnäkymä (development view) keskittyy järjestelmän sisäiseen toteutukseen tarkemmalla tasolla kuvailemalla sisäkkäisia pakkauksia tai luokkahierarkiaa. Jokainen näkymä voidaan liittää osaksi toista näkymää skenaarioiden avulla, jotka heijastelevat järjestelmälle asetettuja vaatimuksia. 
+4+1 -mallissa arkkitehtuuri kuvataan neljän näkymän avulla: looginen, prosessi, fyysinen ja kehitys. Looginen näkymä kuvailee esimerkiksi luokkakaavioiden avulla ohjelmistojärjestelmän elementtejä ja niiden välisiä suhteita tarkentaen järjestelmän rakennetta, prosessinäkymä keskittyy ajonaikaisen suorituksen kuvaamiseen tarkentamalla muunmuassa miten samanaikaisuuden hallinta tapahtuu järjestelmässä, fyysinen näkymä keskittyy siihen miten järjestelmän eri komponentit kuvautuvat fyysiselle laitteistolle jossa komponenttia ajetaan ja lopuksi kehitysnäkymä (development view) keskittyy järjestelmän sisäiseen toteutukseen tarkemmalla tasolla kuvailemalla sisäkkäisia pakkauksia tai luokkahierarkiaa. Jokainen näkymä voidaan liittää osaksi toista näkymää skenaarioiden avulla, jotka heijastelevat järjestelmälle asetettuja vaatimuksia, jolloin skenaariot voidaan nähdä ikäänkuin liimana muuten erillisille näkymille. 
 
 Muita näkymämalleja arkkitehtuuriin on useita, joista jokainen kuitenkin tuo esille vähintään jollain tavalla ohjelmistojärjestelmän rakennetta ja yhteyksiä. Tästä esimerkkinä tunnettu \textit{Views and Beyond} -malli \citep[s.8]{gorton_understanding_2011}. Siinä arkkitehtuurinen malli kuvataan kolmella eri näkymällä: moduuli, joka on järjestelmän rakenteellinen näkymä kuvaten muunmuassa luokkia, pakkauksia, moduulien hajoittamista (decomposition) sekä periytymistä; komponentti ja konnektori, joka kuvailee järjestelmän toiminnallista puolta sekä miten komponentit ovat yhteydessä toisiinsa; allokaatio, joka kuvailee miten prosessit kuvautuvat laitteistotasolla  ja miten ne kommunikoivat keskenään. 
 
-Näiden kahden esitellyn mallin lisäksi on olemassa joukko eri tarkoituksiin sopivia näkymämalleja, joilla on omat vahvuutensa sekä heikkoutensa. Yhteensä viittä eri mallia vertailtiin Mayn tutkimuksessa \cite{may2005survey}, jossa kartoitettiin mahdollisimman laajaa näkymien muodostamaa näkökulmien joukkoa, jotka kattaisivat mahdollisimman laajalti ohjelmistoarkkitehtuurin aluetta (domain). Vertailtavat arkkitehtuurit olivat 4+1-malli, SEI:n (Software Engineering Institute) \textit{Views and Beyond}-malli, ISO:n (International Organization for Standardization) \textit{Reference Model of Open Distributed Processing}, Siemens'n \textit{Four View Model} ja \textit{Rational Architecture Description Specification}. Malleja vertailtiin tutkimalla, että kuinka niiden tarjoamat näkökulmat painottavat kolmeen eri kategoriaan liittyviä asioita: sidosryhmät, laadulliset tekijät ja rakenteelliset ominaisuudet. Joukko, joka painotti mahdollisimman laajasti jokaisen osa-alueen ominaisuuksia muodostettiin lopulta seuraavista osista: \textit{Views and Beyond} -mallin kaikki kolme näkymää ja \textit{Rational ADS}:n vaatimukset-näkökulma (requirements viewpoint). Syy miksi juuri nämä valittiin oli se, että \textit{Views and Beyond} sopii erittäin hyvin mallin pohjaksi, koska se kuvaa järjestelmän rakennetta kattavasti, sen näkökulmat ovat itsenäisiä ja se kokonaisuudessaan limittyy hyvin 4+1-mallin sekä Siemens'n mallin kanssa. Kuitenkaan se ei sisällä tarvittavia näkymiä kuvaamaan eri sidosryhmille tärkeitä asioita, kuten esimerkiksi loppukäyttäjiä varten oleva näkymä puuttuu kokonaan. Tämän takia mukaan on otettu \textit{Rational ADS}, jonka vaatimukset-näkökulma koostuu neljästä eri näkymästä: ei-toiminnalliset vaatimukset, alue (domain), käyttötapaus ja käyttökokemus. Kommunikointi tärkeiden sidosryhmien kanssa on tärkeää, joista ääripäinä ovat kehittäjät ja asiakkaat. Kehittäjät haluavat usein todella tarkkaa usean eri tason ja näkökulman abstraktia kuvausta luotavasta järjestelmästä \citep[s. 120]{Ran:1998:ASV:288408.288438} tai ymmärtääkseen jo valmiiksi luotua järjestelmää \cite{ARaHVeSCiSDu}, kun taas asiakkaat haluavat nähdä järjestelmän toiminnallisuuden juuri heitä koskevien asioiden kannalta.
+Näiden kahden esitellyn mallin lisäksi on olemassa joukko eri tarkoituksiin sopivia näkymämalleja, joilla on omat vahvuutensa sekä heikkoutensa. Yhteensä viittä eri mallia vertailtiin Mayn tutkimuksessa \cite{may2005survey}, jossa kartoitettiin mahdollisimman laajaa näkymien muodostamaa näkökulmien joukkoa, jotka kattaisivat mahdollisimman laajalti ohjelmistoarkkitehtuurin aluetta (domain). Vertailtavat arkkitehtuurit olivat 4+1-malli, SEI:n (Software Engineering Institute) \textit{Views and Beyond}-malli, ISO:n (International Organization for Standardization) \textit{Reference Model of Open Distributed Processing}, Siemens'n \textit{Four View Model} ja \textit{Rational Architecture Description Specification}. Malleja vertailtiin tutkimalla, että kuinka niiden tarjoamat näkökulmat painottavat kolmeen eri kategoriaan liittyviä asioita: sidosryhmät, laadulliset tekijät ja rakenteelliset ominaisuudet. Joukko, joka painotti mahdollisimman laajasti jokaisen osa-alueen ominaisuuksia muodostettiin lopulta seuraavista osista: \textit{Views and Beyond} -mallin kaikki kolme näkymää ja \textit{Rational ADS}:n vaatimukset-näkökulma (requirements viewpoint). Syy miksi juuri nämä valittiin oli se, että \textit{Views and Beyond} sopii erittäin hyvin mallin pohjaksi, koska se kuvaa järjestelmän rakennetta kattavasti, sen näkökulmat ovat itsenäisiä ja se kokonaisuudessaan limittyy hyvin 4+1-mallin sekä Siemens'n mallin kanssa. Kuitenkaan se ei sisällä tarvittavia näkymiä kuvaamaan eri sidosryhmille tärkeitä asioita, kuten esimerkiksi loppukäyttäjiä varten oleva näkymä puuttuu kokonaan. Tämän takia mukaan on otettu \textit{Rational ADS}, jonka vaatimukset-näkökulma koostuu neljästä eri näkymästä: ei-toiminnalliset vaatimukset, alue (domain), käyttötapaus ja käyttökokemus. 
+
+Kommunikointi tärkeiden sidosryhmien kanssa on tärkeää, joista ääripäinä ovat kehittäjät ja asiakkaat. Kehittäjät haluavat usein todella tarkkaa usean eri tason ja näkökulman abstraktia kuvausta luotavasta järjestelmästä \citep[s. 120]{Ran:1998:ASV:288408.288438} tai ymmärtääkseen jo valmiiksi luotua järjestelmää \cite{ARaHVeSCiSDu}, kun taas asiakkaat haluavat nähdä järjestelmän toiminnallisuuden juuri heitä koskevien asioiden kannalta ja usein mahdollisimman korkealla tasolla.
 
 \subsubsection{Näkökulmat}
-Rozanskin ja ym. \citep[s. 36-42]{Rozanski:2011:SSA:2072649} määrittelevät, että näkökulmat (viewpoints) liittyvät vahvasti arkkitehtuurisiin näkymiin. Näkökulma voidaan määritellä olevan kokoelma malleja (patterns), templaatteja sekä konventioita, joiden avulla näkymä pystytään rakentamaan.  Näkökulmien joukko voidaan taas jakaa seitsemään eri osaan: kontekstinen, funktionaalinen, tieto, samanaikaisuus, kehittäminen, käyttöönotto ja operationaalinen. Näistä keskitytään tämän tutkimuksen myöhemmässä vaiheessa kehittämisen näkökulmaan, koska se kommunikoi niiden sidosryhmien kanssa, jotka ovat mukana järjestelmän kehityksessä, testauksessa, ylläpidossa ja parantamisessa.  
+Rozanskin ja ym. \citep[s. 36-42]{Rozanski:2011:SSA:2072649} määrittelevät, että näkökulmat (viewpoints) liittyvät vahvasti arkkitehtuurisiin näkymiin. Näkökulma voidaan määritellä olevan kokoelma malleja (patterns), templaatteja sekä konventioita, joiden avulla näkymä pystytään rakentamaan.  Näkökulmien joukko voidaan taas jakaa seitsemään eri osaan: kontekstinen, funktionaalinen, informaatiollinen, samanaikaisuudellinen, kehittämisellinen, käyttöönotollinen ja operationaalinen. Näistä keskitytään tämän tutkimuksen myöhemmässä vaiheessa kehittämisen sekä funktionaalisuuden näkökolmaan. Kehittämisen näkökulmaan siksi, koska se kommunikoi niiden sidosryhmien kanssa, jotka ovat mukana järjestelmän kehityksessä, testauksessa, ylläpidossa ja parantamisessa. Funktionaalinen näkökulma taas kuvailee muunmuassa järjestelmän suorituksenaikaisia komponentteja sekä niiden rajapintoja.
 
 IEEE:n virallinen määritelmä näkokulmalle on \textit{a specification of the conventions for constructing and using a view. A pattern or template
-from which to develop individual views by establishing the purposes and audience for a view and the tech-
-niques for its creation and analysis} \citep[s. 4]{ieee_2000}. 
+from which to develop individual views by establishing the purposes and audience for a view and the techniques for its creation and analysis} \citep[s. 4]{ieee_2000}. Se on määritelmä, jota tullaan käyttämään myös tässä tutkimuksessa.
 
 
 
@@ -218,18 +234,22 @@ niques for its creation and analysis} \citep[s. 4]{ieee_2000}.
 %onko testatavuus missäkin tapauksessa eri näkymien yli menevä vai voiko tai kannattaako sille jossain tilanteessa olla ihan oma näkymänsä, ja jos niin millainen se sitten olisi
 
 \subsection{Näkymän luominen}
-%Vaatimusten keräys vs ei-toiminnalliset vs toiminnalliset.
 
-Ohjelmistoarkkitehtuuri toimii siltana ohjelmakoodin ja ohjelmalla asetettujen vaatimusten välillä \citep[s. 94]{Garlan:2000:SAR:336512.336537}, joten on luonnollista, että näkymä luodaan näiden pohjalta. Sitä luodessa on myös otettava huomioon kenelle näkymä on tarkoitettu, minkälaisia asioita halutaan näkymän painottavan ja millä abstraktiotasolla näkymän tulisi olla. Esimerkiksi ohjelmakoodin kautta luotava näkymä UML-malli saattaa olla tehty projektiin tulevia uusia ohjelmoijia varten, jotta voitaisiin helposti näyttää kyseisen ohjelmistojärjestelmän rajapinnat. Tämän mallin päätarkoitus on kuvata siis ohjelmiston rakennetta, mutta abstrahoida pois kaikki asian kannalta turha.
+Ohjelmistoarkkitehtuuri toimii siltana ohjelmakoodin ja ohjelmalle asetettujen vaatimusten välillä \citep[s. 94]{Garlan:2000:SAR:336512.336537}, joten on luonnollista, että näkymä luodaan näiden pohjalta. Sitä luodessa on myös otettava huomioon kenelle näkymä on tarkoitettu, minkälaisia asioita halutaan näkymän painottavan ja millä abstraktiotasolla näkymän tulisi olla. 
 
-Vaatimusten check p 119.
+Esimerkiksi ohjelmakoodin kautta luotava UML-malli saattaa olla näkymä projektin rakenteeseen uusia ohjelmoijia varten, jotta voitaisiin helposti esittää kyseisen ohjelmistojärjestelmän päärajapinnat. Tällaisen mallin päätarkoitus on kuvata ohjelmistojärjestelmän rakennetta, mutta abstrahoida pois kaikki turhat tarkan kuvaukset luokista, joilla ei ole juuri sillä hetkellä merkitystä. 
+
+Aloittaessa arkkitehtuuri tyhjästä 
+%Chapt. 7 & 8 + Arch views -paperi + What is an architectural description?
 
 
 
 
 \section{Ohjelmistojen laadulliset tekijät}
-\subsection{Arviointi}
+\subsection{Laadullisten vaatimusten keräys}
+\subsection{Toiminnalliset ja ei-toiminnalliset vaatimukset}
 \subsection{Tradeoffit}
+\subsection{Arviointi}
 
 \section{Testattavuus laadullisena tekijänä}
 \subsection{Testattavuuden merkitys}
