--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -53,7 +53,7 @@
 	abstract = {This recommended practice addresses the activities of the creation, analysis, and sustainment of architectures of software-intensive systems, and the recording of such architectures in terms of architectural descriptions . A conceptual framework for architectural description is established. The content of an architectural description is defined. Annexes provide the rationale for key concepts and terminology, the relationships to other standards, and examples of usage.},
 	pages = {i--23},
 	journaltitle = {{IEEE} Std 1471-2000},
-	date = {2000},
+	year = {2000},
 	keywords = {architectural description, architecture, software-intensive system, stakeholder con-cerns, system stakeholder, view, viewpoint},
 	file = {IEEE Xplore Abstract Record:files/98/abs_all.html:text/html}
 }
